syntax = "proto3";

package webhooks;

service WebhooksService {
    rpc GetAllWebhooks(GetAllWebhooksRequest) returns (GetAllWebhooksResponse) {}
}

message Webhook {
    int32 id = 1;
    string name = 2;
    string url = 3;
    repeated string event_types = 4;
}

message GetAllWebhooksRequest {}

message GetAllWebhooksResponse {
    repeated Webhook webhooks = 1;
}